clusters/cl01tl/manifests/prowlarr/Deployment-prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    helm.sh/chart: prowlarr-5.2.1
  namespace: prowlarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: prowlarr
      app.kubernetes.io/instance: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/name: prowlarr
    spec:
      enableServiceLinks: false
      serviceAccountName: prowlarr
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: TZ
              value: America/Chicago
            - name: PROWLARR__AUTH__METHOD
              value: External
            - name: PROWLARR__AUTH__REQUIRED
              value: DisabledForLocalAddresses
          image: ghcr.io/linuxserver/prowlarr:2.6.5.5623-ls162@sha256:f2b26429893d4c4cb71941b7ee50b1bdecd9d5f9f9e02d5410615e9f4f7c8d95
          livenessProbe:
            httpGet:
              path: /ping
              port: 9696
          name: main
          readinessProbe:
            httpGet:
              path: /ping
              port: 9696
          resources:
            requests:
              cpu: 10m
              memory: 200Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /ping
              port: 9696
            periodSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: config
        - args:
            - prowlarr
          image: ghcr.io/onedr0p/exportarr:v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
          name: metrics
        - env:
            - name: OAUTH2_PROXY_HTTP_ADDRESS
              value: 0.0.0.0:4180
            - name: OAUTH2_PROXY_METRICS_ADDRESS
              value: 0.0.0.0:44180
            - name: OAUTH2_PROXY_UPSTREAMS
              value: http://localhost:9696
            - name: OAUTH2_PROXY_PROVIDER
              value: oidc
            - name: OAUTH2_PROXY_CODE_CHALLENGE_METHOD
              value: S256
            - name: OAUTH2_PROXY_SKIP_PROVIDER_BUTTON
              value: "true"
            - name: OAUTH2_PROXY_EMAIL_DOMAINS
              value: '*'
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.5@sha256:8498b0d0ef0a7b29686414000a08aee467f02d0299c9ed1e006a8f33fc017916
          livenessProbe:
            httpGet:
              path: /ping
              port: 4180
          name: oauth
          readinessProbe:
            httpGet:
              path: /ready
              port: 4180
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
