clusters/cl01tl/manifests/prowlarr/Service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/service: prowlarr
    helm.sh/chart: prowlarr-5.2.1
  namespace: prowlarr
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9696
      protocol: TCP
      name: http
    - port: 9792
      targetPort: 9792
      protocol: TCP
      name: metrics
    - port: 4180
      targetPort: 4180
      protocol: TCP
      name: oauth
    - port: 44180
      targetPort: 44180
      protocol: TCP
      name: oauth-metrics
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
