clusters/cl01tl/manifests/prowlarr/HTTPRoute-http-route-prowlarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: http-route-prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/part-of: prowlarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - prowlarr.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: prowlarr
          port: 80
          weight: 100
