clusters/cl01tl/manifests/prowlarr/HTTPRoute-prowlarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    helm.sh/chart: prowlarr-5.2.1
  namespace: prowlarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "prowlarr.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prowlarr
          namespace: prowlarr
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
